syntax = "proto3";
package dfsapp.dstorage.dstorage;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dstorage/params.proto";
import "dstorage/system_info.proto";
import "dstorage/stored_file.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/dfsapp/dstorage/x/dstorage/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dfsapp/dstorage/dstorage/params";
  }
  // Queries a SystemInfo by index.
	rpc SystemInfo(QueryGetSystemInfoRequest) returns (QueryGetSystemInfoResponse) {
		option (google.api.http).get = "/dfsapp/dstorage/dstorage/system_info";
	}
// Queries a StoredFile by index.
	rpc StoredFile(QueryGetStoredFileRequest) returns (QueryGetStoredFileResponse) {
		option (google.api.http).get = "/dfsapp/dstorage/dstorage/stored_file/{index}";
	}

	// Queries a list of StoredFile items.
	rpc StoredFileAll(QueryAllStoredFileRequest) returns (QueryAllStoredFileResponse) {
		option (google.api.http).get = "/dfsapp/dstorage/dstorage/stored_file";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetSystemInfoRequest {}

message QueryGetSystemInfoResponse {
	SystemInfo SystemInfo = 1 [(gogoproto.nullable) = false];
}
message QueryGetStoredFileRequest {
	  string index = 1;

}

message QueryGetStoredFileResponse {
	StoredFile storedFile = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredFileRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredFileResponse {
	repeated StoredFile storedFile = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
